bk_ida/gccida/g1/make_extraction
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6378:4: error: expected ';' after expression
rtx v13; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6378:5: error: use of undeclared identifier 'v13'
rtx v13; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6380:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6395:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6395:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6398:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode; // [rsp+4h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6399:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmodea; // [rsp+4h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6402:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+18h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6405:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode is_mode; // [rsp+28h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6406:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_mode; // [rsp+2Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6411:18: error: invalid suffix 'xmode' on integer constant
v10 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6441:1: error: use of undeclared identifier 'v13'
v13 = pos_rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6448:1: error: use of undeclared identifier 'v13'
v13 = pos_rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6451:1: error: use of undeclared identifier 'v13'
v13 = pos_rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6453:7: error: use of undeclared identifier 'v13'
v43 = v13 == 0LL; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6454:26: error: use of undeclared identifier 'v13'
v14 = ( unsigned __int64)v13 | pos; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/combine.c:6455:25: error: use of undeclared identifier 'v13'
if ( ( unsigned __int64)v13 | pos ) 
                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/make_extraction/src/obj/combine.o] Error 1
